Make font_warmup_win.cc link with enable_plugins=false

Make font_warmup_win.cc link with enable_plugins=false.
Fixes content_shell build with enable_plugins=false.

Bug: 807901
Change-Id: Ied8af485013629407720148946d94353b5da1dcd
Reviewed-on: https://chromium-review.googlesource.com/897482
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Kimmo Kinnunen FI <kkinnunen@nvidia.com>
Cr-Commit-Position: refs/heads/master@{#533620}
Former-commit-id: bfb91472ae05ba9ce2b9be83e643f91dd0ae024d